fix(mail): use Pebble expressions